corrected control flow and added change detection

--- a/src/app/dashboard/pages/control-flow/control-flow.html
+++ b/src/app/dashboard/pages/control-flow/control-flow.html
@@ -36,7 +36,7 @@
   <!-- @for -->
   <div class="bg-white rounded shadow p-10">
     <ul>
-      @for (framework of frameworks(); track frameworks; let i = $index, first =
+      @for (framework of frameworks(); track framework; let i = $index, first =
       $first, last = $last, even = $even, odd = $odd, count = $count ) {
       <li
         [class]="{
